--- a/demo_pythond_jango/templates/logindemo/login.html
+++ b/demo_pythond_jango/templates/logindemo/login.html
@@ -5,7 +5,7 @@
     <title>登录页面</title>
 </head>
 <body>
-<form method="post" action="/login_check">
+<form method="post" action="/login/login_check">
     用户名:<input type="text" name="username"/><br/>
     密码:<input type="text" name="password"/><br/>
     <input type="submit" value="登录">
