--- a/demo_pythond_jango/templates/logindemo/login_ajax.html
+++ b/demo_pythond_jango/templates/logindemo/login_ajax.html
@@ -2,37 +2,47 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>登录页面</title>
+    <title>ajax登录页面</title>
     <script src="/static/js/jquery-1.11.3.min.js"></script>
     <script>
         $(function () {
-            //绑定btnAjax的click事件
-            $('#btnAjax').click(function () {
+            $('#btnLogin').click(function () {
+                //获取用户名和密码
+                username = $('#username').val();
+                password = $('#password').val();
+                //发起ajax请求,/login_ajax_check , 携带用户名和密码
                 $.ajax({
-                    'url':'/login/ajax_handle',
+                    'url':'/login/login_ajax_check',
+                    'type':'post',
+                    'data':{'username':username,'password':password},
                     'dataType':'json'
                 }).success(function (data) {
-                    //进行处理
-                    if(data.res ==1){
-                        $('#message').show().html('提示信息');
+                    //登录成功 {'res':1}
+                    //登录失败 {'res':0}
+                    if(data.res==0){
+                        $('#errmsg').show().html("用户名或密码错误");
+                    }else{
+                        //跳转到首页
+                        location.href = '/login/index'
                     }
                 });
             });
-
         })();
-
     </script>
 
     <style>
-        #message{
+        #errmsg{
             display: none;
             color: red;
         }
     </style>
-
 </head>
 <body>
-<input type="button" id="btnAjax" value="ajax请求"/>
-<div id="message"></div>
+<div>
+    用户名:<input type="text" name="username" id="username"/><br/>
+    密码:<input type="text" name="password" id="password"/><br/>
+    <input type="button" id="btnLogin" value="登录">
+    <div id="errmsg"></div>
+</div>
 </body>
 </html>
