02_状态保持_cookie记住用户名

--- a/demo_pythond_jango/templates/logindemo/login_ajax.html
+++ b/demo_pythond_jango/templates/logindemo/login_ajax.html
@@ -41,7 +41,7 @@
 <div>
     用户名:<input type="text" name="username" id="username"/><br/>
     密码:<input type="text" name="password" id="password"/><br/>
-    <input type="button" id="btnLogin" value="登录">
+    <input type="button" id="btnLogin" value="登录"><br/>
     <div id="errmsg"></div>
 </div>
 </body>
