05_模板语言_自定义过滤器

--- a/demo_pythond_jango/templates/templatedemo/temp_filter.html
+++ b/demo_pythond_jango/templates/templatedemo/temp_filter.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+{% load filters %}
 <head>
     <meta charset="UTF-8">
     <title>模板变量</title>
@@ -29,7 +30,16 @@
     {% else %}
         <li class="green">{{ book.btitle }} -- {{ book.bpub_date|date:'Y年-m月-d日'  }}</li>
     {% endif %}
+
+
 {% endfor %}
+
+
+    自定义标签:
+    {% if 4|mod %}
+        是偶数
+    {% endif %}
+
 
 </body>
 </html>
