--- a/demo-authserver/sso-portal-password/src/main/resources/templates/product_detail.html
+++ b/demo-authserver/sso-portal-password/src/main/resources/templates/product_detail.html
@@ -42,7 +42,7 @@
 </script>
 <body>
     登陆用户:<p th:text="${loginUser}"></p>
-    <a href="http://portal.tuling.com:8855/logout">退出</a>
+    <a href="http://localhost:8855/logout">退出</a>
     <br/>
     <br/>
                 <input th:id="productNo" hidden="true" name="productNo" th:value="${productInfo.productNo}" ><br/>
