--- a/demo-authserver/sso-portal-password/src/main/resources/templates/home.html
+++ b/demo-authserver/sso-portal-password/src/main/resources/templates/home.html
@@ -7,15 +7,15 @@
 <script type="text/javascript" th:src="@{/assets/js/jquery.js}"></script>
 <script>
     function queryProductDetail(productId) {
-        var currentUrl = "http://portal.tuling.com:8855/product/"+productId;
+        var currentUrl = "http://localhost:8855/product/"+productId;
         $.ajax({
             type: "GET",
             data: null,
             dataType: null,
-            url: "http://portal.tuling.com:8855/product/"+productId,
+            url: "http://localhost:8855/product/"+productId,
             success: function(ret){
                 if(ret.status=='-1') {
-                    window.location.href="http://portal.tuling.com:8855/login.html?callBack="+currentUrl;
+                    window.location.href="http://localhost:8855/login.html?callBack="+currentUrl;
                 }
             }
         });
@@ -25,7 +25,7 @@
 
 
 <body>
-    <a href="http://portal.tuling.com:8855/product/1" >苹果11</a> <br/>
-    <a href="http://portal.tuling.com:8855/product/2" >华为meta30</a><br/>
+    <a href="http://localhost:8855/product/1" >苹果11</a> <br/>
+    <a href="http://localhost:8855/product/2" >华为meta30</a><br/>
 </body>
 </html>
