--- a/demo-authserver/sso-portal-code/src/main/resources/templates/home.html
+++ b/demo-authserver/sso-portal-code/src/main/resources/templates/home.html
@@ -5,7 +5,7 @@
     <title>淘宝商城</title>
 </head>
 <body>
-    <a href="http://portal.tuling.com:8855/product/1">苹果11</a> <br/>
-    <a href="http://portal.tuling.com:8855/product/2">华为meta30</a>
+    <a href="http://localhost:8855/product/1">苹果11</a> <br/>
+    <a href="http://localhost:8855/product/2">华为meta30</a>
 </body>
 </html>
