--- a/demo-authserver/sso-portal-code/src/main/resources/templates/product_detail.html
+++ b/demo-authserver/sso-portal-code/src/main/resources/templates/product_detail.html
@@ -23,14 +23,14 @@
             data:JSON.stringify(buyVo),
             success: function(ret){
                 if(ret.status=="-1") {
-                    window.location.href="http://localhost:8888/oauth/authorize?response_type=code&client_id=portal_app&redirect_uri=http://portal.tuling.com:8855/callBack&state="+currentUrl;
+                    window.location.href="http://localhost:8888/oauth/authorize?response_type=code&client_id=portal_app&redirect_uri=http://localhost:8855/callBack&state="+currentUrl;
                 }if(ret.status=='888888') {
                     var orderNo = ret.data;
                     //购买成功跳转到订单详情页面
                     window.location.href="http://localhost:8855/detail/"+orderNo;
                 }if(ret.status == "000007") {
 
-                    window.location.href="http://localhost:8888/oauth/authorize?response_type=code&client_id=portal_app&redirect_uri=http://portal.tuling.com:8855/callBack&state="+currentUrl;
+                    window.location.href="http://localhost:8888/oauth/authorize?response_type=code&client_id=portal_app&redirect_uri=http://localhost:8855/callBack&state="+currentUrl;
                 }
                 else{
                     alert(ret.msg);
@@ -51,10 +51,10 @@
             success: function(ret){
                 if(ret.status == '000006') {
                     //Cookie的登陆方案，需要删除流浪器中的cookie
-/*                    $.removeCookie("COOKIE-ACCESS-TOKEN-KEN", {path: '/',domain:'tuling.com',path:'/'});
-                    $.removeCookie("COOKIE-REFRESH-TOKEN-KEN", {path: '/',domain:'tuling.com',path:'/'});*/
+/*                    $.removeCookie("COOKIE-ACCESS-TOKEN-KEN", {path: '/',domain:'xxx.com',path:'/'});
+                    $.removeCookie("COOKIE-REFRESH-TOKEN-KEN", {path: '/',domain:'xxx.com',path:'/'});*/
 
-                    window.location.href = "http://localhost:8888/logout?redirectUrl=http://portal.tuling.com:8855/home.html";
+                    window.location.href = "http://localhost:8888/logout?redirectUrl=http://localhost:8855/home.html";
                 }else {
                     //说明 我们的portal-web端退出失败
                 }
